kubernetes/namespace-myapp.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: my-app


# kubectl apply -f namespace-myapp.yaml    
# kubectl delete -f namespace-myapp.yaml
