kubernetes/app-full.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: my-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-app
  namespace: my-app
spec:
  replicas: 2 
  selector:
    matchLabels:
      app: hello-world-app
  template:
    metadata:
      labels:
        app: hello-world-app
    spec:      
      containers:
      - name: hello-world
        image: mdnmdn/k8s-hello:v1
        #imagePullPolicy: Always
        ports:
        - containerPort: 3000
          protocol: TCP
          name: node-http
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world-svc
  namespace: my-app
spec:
  selector:
    app: hello-world-app
  ports:
  - port: 80
    targetPort: 3000
---
kind: Ingress
#apiVersion: networking.k8s.io/v1
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: hello-world-ingr
  namespace: my-app
  annotations:    
    kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/enable-cors: 'true'    
spec:  
  rules:
    - http:
        paths:
          - path: /
            backend:
              servicePort: 80
              serviceName: hello-world-svc
      #host: localhost

# kubectl apply -f app-full.yaml
# kubectl delete -f app-full.yaml
